Crash when using Curve as Stroke Method for Crease or Pinch in sculpt mode #70006

Closed
opened 2019-09-18 07:31:22 +02:00 by Leiser Fernández Gallo · 7 comments

System Information
Operating system: Linux-4.19.69-1-MANJARO-x86_64-with-arch-Manjaro-Linux 64 Bits
Graphics card: Mesa DRI Intel(R) UHD Graphics 620 (Kabylake GT2) Intel Open Source Technology Center 4.5 (Core Profile) Mesa 19.1.5

Blender Version
Broken: version: 2.81 (sub 11), branch: master, commit date: 2019-09-17 19:54, hash: 9609840b5e
Worked: (optional)

Short description of error
Blender stops suddenly as soon as I try to create the curve

Exact steps for others to reproduce the error
Go to sculpt tab, select Crase or Pinch and curve as stroke method. Add a new curve and drag in the canvas, over the 3d model, Blender will crash. I checked the error log, it has this content:

# Blender 2.81 (sub 11), Commit date: 2019-09-17 19:54, Hash 9609840b5ea1
bpy.ops.sculpt.sculptmode_toggle()  # Operator
bpy.data.brushes["Crease"].stroke_method = 'CURVE'  # Property
bpy.ops.paintcurve.new()  # Operator

# backtrace
blender(BLI_system_backtrace+0x1d) [0x14dc96d]
blender() [0x12be799]
/usr/lib/libc.so.6(+0x3a7e0) [0x7fbd4067d7e0]
blender(flushTransPaintCurve+0x20) [0x2eb5a40]
blender(recalcData+0x10d) [0x2eba56d]
blender() [0x2e9d757]
blender(transformApply+0x75) [0x2ea0d15]
blender() [0x2ec5a5e]
blender() [0x1691c9c]
blender() [0x1692e36]
blender() [0x1694a3c]
blender(wm_event_do_handlers+0x312) [0x1695112]
blender(WM_main+0x20) [0x168aaf0]
blender(main+0x2fe) [0x122ab9e]
/usr/lib/libc.so.6(__libc_start_main+0xf3) [0x7fbd40669ee3]
blender() [0x12bb0bc]

**System Information** Operating system: Linux-4.19.69-1-MANJARO-x86_64-with-arch-Manjaro-Linux 64 Bits Graphics card: Mesa DRI Intel(R) UHD Graphics 620 (Kabylake GT2) Intel Open Source Technology Center 4.5 (Core Profile) Mesa 19.1.5 **Blender Version** Broken: version: 2.81 (sub 11), branch: master, commit date: 2019-09-17 19:54, hash: `9609840b5e` Worked: (optional) **Short description of error** Blender stops suddenly as soon as I try to create the curve **Exact steps for others to reproduce the error** Go to sculpt tab, select Crase or Pinch and curve as stroke method. Add a new curve and drag in the canvas, over the 3d model, Blender will crash. I checked the error log, it has this content: ``` # Blender 2.81 (sub 11), Commit date: 2019-09-17 19:54, Hash 9609840b5ea1 bpy.ops.sculpt.sculptmode_toggle() # Operator bpy.data.brushes["Crease"].stroke_method = 'CURVE' # Property bpy.ops.paintcurve.new() # Operator # backtrace blender(BLI_system_backtrace+0x1d) [0x14dc96d] blender() [0x12be799] /usr/lib/libc.so.6(+0x3a7e0) [0x7fbd4067d7e0] blender(flushTransPaintCurve+0x20) [0x2eb5a40] blender(recalcData+0x10d) [0x2eba56d] blender() [0x2e9d757] blender(transformApply+0x75) [0x2ea0d15] blender() [0x2ec5a5e] blender() [0x1691c9c] blender() [0x1692e36] blender() [0x1694a3c] blender(wm_event_do_handlers+0x312) [0x1695112] blender(WM_main+0x20) [0x168aaf0] blender(main+0x2fe) [0x122ab9e] /usr/lib/libc.so.6(__libc_start_main+0xf3) [0x7fbd40669ee3] blender() [0x12bb0bc] ```

Added subscriber: @leiserfg

Added subscriber: @leiserfg

I also checked and is working fine on 2.80.

I also checked and is working fine on 2.80.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

I can successfully create a paint curve, but can reproduce a crash selecting one of the curve points and translating that with G, or scale it with S, etc...
I'll check on this...

I can successfully create a paint curve, but can reproduce a crash selecting one of the curve points and translating that with `G`, or scale it with `S`, etc... I'll check on this...
Philipp Oeser self-assigned this 2019-09-18 13:29:29 +02:00
Member

This was caused by 309cd047ef.
Above commit introduced code that would skip early for sculptmode (leaving out the neccessary createTransPaintCurveVerts)...

Fix incoming...

This was caused by 309cd047ef. Above commit introduced code that would skip early for sculptmode (leaving out the neccessary `createTransPaintCurveVerts`)... Fix incoming...

This issue was referenced by 67310ed976

This issue was referenced by 67310ed976186f95e737daa2f83b2cd615351f00
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70006
No description provided.